Ignore Go packages
Adds /pkg/ to .gitignore. Ran into this in Visual Studio Code running
from chromiumos/src/platform/tast-tests. VSCode would compile go
packages and put them in /pkg/.

BUG=None
TEST=It removes /pkg/**/*.a from my change list

Change-Id: I282111eaec28926c665e9c577cfa15a2452a20a7

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Visual Studio Code
 /src/.vscode/
 
+# Go packages, e.g. when Visual Studio Code is run from the base folder, not src
+/pkg/
+
 # Emacs.
 *~
 
