tast-tests: Open ARC app from Chrome Intent Picker
The Chrome Intent Picker shows ARC apps who have an intent-filter for an
android.intent.action.VIEW and when clicked they open up in the chosen
app. This test verifies that an app with a correctly applied
intent-filter receives the ACTION_VIEW.

BUG=chromium:1131843
TEST=tast run <DUT-IP> arc.ChromeIntentPicker

Change-Id: Ibf3f75dc03a4e59a79b685ba988c4f5f5332d1e5

--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -9,6 +9,7 @@ group("all") {
     "ArcAppValidityTest:ArcAppValidityTest",
     "ArcAudioTest:ARCAudioTest",
     "ArcCameraFpsTest:ArcCameraFpsTest",
+    "ArcChromeIntentPickerTest:ArcChromeIntentPickerTest",
     "ArcClipboardTest:ArcClipboardTest",
     "ArcConfigChangesTest:ArcConfigChangesTest",
     "ArcChromeSharesheetTest:ArcChromeSharesheetTest",
