--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -8,6 +8,7 @@ group("all") {
     "ArcAnimationPerformanceTest:ArcAnimationPerformanceTest",
     "ArcAppValidityTest:ArcAppValidityTest",
     "ArcAudioTest:ARCAudioTest",
+    "ArcBackupTest:ArcBackupTest",
     "ArcCameraFpsTest:ArcCameraFpsTest",
     "ArcClipboardTest:ArcClipboardTest",
     "ArcConfigChangesTest:ArcConfigChangesTest",
