tast tests: Test to verify arc can share files to Downloads.
Add a test to verify that downloading an image file
from ARC app saves it to Downloads folder.This commit includes
the test app which downloads the file to Downloads path.

BUG=b:176870368
TEST=tast -verbose run <DUT> arc.ShareFilesToArc.vm

Change-Id: I9ed257802d63c834f7bce62af480edcd18b7162e

--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -12,6 +12,7 @@ group("all") {
     "ArcCameraFpsTest:ArcCameraFpsTest",
     "ArcChromeIntentPickerTest:ArcChromeIntentPickerTest",
     "ArcClipboardTest:ArcClipboardTest",
+    "ArcDownloadTest:ArcDownloadTest",
     "ArcConfigChangesTest:ArcConfigChangesTest",
     "ArcChromeSharesheetTest:ArcChromeSharesheetTest",
     "ArcConnectivityTest:ArcConnectivityTest",
