Add Tast for Resize Lock feature
Change-Id: Id213103e08255af1ca7dad99d4bc352859aa7258

--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -38,6 +38,7 @@ group("all") {
     "ArcPrintTest:ArcPrintTest",
     "ArcPreImeKeyEventTest:ArcPreImeKeyEventTest",
     "ArcQuarterSizedWindowZoomingTest:ArcQuarterSizedWindowZoomingTest",
+    "ArcResizeLockTest:ArcResizeLockTest",
     "ArcSensorLatencyTest:ArcSensorLatencyTest",
     "ArcSoftInputModeTest:ArcSoftInputModeTest",
     "ArcSurfaceInsetsTest:ArcSurfaceInsetsTest",
