Add vm support to arc.BlackFlash
- Add vm param to the test.

- Fix the wrong assumption of default windowing mode in R.

- Remove the dependency on Companion Lib to move the source code
to chromium os code base, and reduce flakiness.

- Add some polling logic to remove flakiness.

BUG=b:168010357
TEST=tast -verbose run $DUT arc.BlackFlash.vm

Change-Id: I7b519415cf96db66dfcb980e1cf3a26fb170ecda

--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -9,6 +9,7 @@ group("all") {
     "ArcAppValidityTest:ArcAppValidityTest",
     "ArcAudioTest:ARCAudioTest",
     "ArcBackupTest:ArcBackupTest",
+    "ArcBlackFlashTest:ArcBlackFlashTest",
     "ArcCameraFpsTest:ArcCameraFpsTest",
     "ArcChromeIntentPickerTest:ArcChromeIntentPickerTest",
     "ArcClipboardTest:ArcClipboardTest",
