tast-tests: Use Google News instead of YouTube as a test app
- YouTube app is pre-installed on some devices. Use Google News app
  instead.

BUG=b:228643716
TEST=tast run DUT assistant.AndroidAndWeb

Change-Id: I9b3a932c21891341f058101fa193392215454650
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform/tast-tests/+/3603047
Reviewed-by: Eric Sum <esum@google.com>
Commit-Queue: Yuki Awano <yawano@google.com>
Tested-by: Yuki Awano <yawano@google.com>
Reviewed-by: Eliot Courtney <edcourtney@chromium.org>
Reviewed-by: Hiroki Sato <hirokisato@chromium.org>
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>

--- a/android/AssistantAndroidAppTest/AndroidManifest.xml
+++ b/android/AssistantAndroidAppTest/AndroidManifest.xml
@@ -3,9 +3,9 @@
      Use of this source code is governed by a BSD-style license that can be
      found in the LICENSE file.
 -->
-<!-- This is a fake app which pretends it as a YouTube app. -->
+<!-- This is a fake app which pretends it as a Google News app. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.youtube">
+    package="com.google.android.apps.magazines">
     <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="29" />
     <application>
         <activity android:name=".MainActivity" android:exported="true"
