--- a/android/BUILD.gn
+++ b/android/BUILD.gn
@@ -61,6 +61,7 @@ group("all") {
     "ArcSurfaceInsetsTest:ArcSurfaceInsetsTest",
     "ArcTtsTest:ArcTtsTest",
     "ArcInstallAppWithAppListSortedTest:ArcInstallAppWithAppListSortedTest",
+    "ArcVpnTest:ArcVpnTest",
     "ArcWMTestApp:ArcWMTestApp_23",
     "ArcWMTestApp:ArcWMTestApp_24",
     "ArcWMTestApp:ArcWMTestApp_24_InMaximizedList",
